[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pornpics"
version = "0.1.0"
description = "A Python wrapper for the PornPics.com website."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name="Dankaristic"}
]
license = {text="MIT"}
keywords = ["pornpics", "xxx", "adult", "async", "sync", "wrapper", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "httpx>=0.24",
    "beautifulsoup4>=4.12",
    "pydantic>=2.1",
]

[project.urls]
Homepage = "https://github.com/dankaristic/pornpics"
Repository = "https://github.com/dankaristic/pornpics"
"Bug Tracker" = "https://github.com/dankaristic/pornpics/issues"